# discord-mcp

./: .env.example  ARCHITECTURE.md  CLAUDE.md  DM_USAGE_EXAMPLES.md  README.md  TOKEN_GUIDE.md  debug_json_output.py  debug_token.py  get_token.py  pyproject.toml
src/discord_mcp/: api_client.py  config.py  logger.py  messages.py  server.py  token_extractor.py
tests/: conftest.py  test_integration.py  test_unit.py
